2004-08-17 hugo303

	* src/check.c, src/check.h.in, tests/check_check_master.c,
	tests/check_check_sub.c, ChangeLog
	Applied varargs patch (#933411) and added test cases.
	* src/check.h.in tests/check_check_master.c tests/check_check_sub.c:
	Applied fail_if (#709167) patch.

2004-08-16 hugo303

	* doc/tutorial.sgml: Applied 'newbies' patch #995028 for autoconf doc.
	* rpm/check.spec.in: Applied doc patch #995028 from Bill Barnard.

2004-06-04 hugo303

	* tests/: test_log_output.sh test_output.sh: Fixed portability
	problem by changing == to =.

2004-05-26 hugo303

	* rpm/check.spec.in: Changed copyright.

2004-05-25 hugo303

        * src/check_run.c: Applied patch 796705. Replacing _exit with exit.

2004-05-25 hugo303

	* src/check.c tests/check_check_master.c tests/check_check_sub.c:
	Applied patch for bug 793671.

2004-05-17 10:44 hugo303

	* Released 0.9.0. See NEWS file for changes.

2002-10-16 13:47  neo23

	* AUTHORS, ChangeLog, configure.in: Bumped version number to 0.8.4.
	Updated AUTHORS and ChangeLog.

2002-10-16 13:39  neo23

	* src/check_msg.c, tests/check_check_msg.c: Applied a patch from
	Rick Poyner that changes the pipe used for IPC to use a temporary
	file instead of stdin/stdout. This fixes the long-standing problem
	that the pipe used to fill up when too many fail_unless() were
	used. (#482012).

2002-10-09 18:57  neo23

	* src/check.h.in: Applied a patch from Rick Poyner that fixes a
	typo which broke check for C++ compilers (bug #601397).

2002-08-16 19:41  neo23

	* src/: check.c, check_msg.c, check_msg.h, check_pack.c,
	check_pack.h: Applied a patch from Dietmar Petras <dpetras@gmx.de>
	that plugs some memory leaks.

2002-07-10 04:37  neo23

	* .cvsignore, autogen.sh: Call aclocal from autogen.sh.

2002-07-10 04:32  neo23

	* aclocal.m4, depcomp, install-sh, missing, mkinstalldirs: Removed
	files generated by automake.

2002-06-16 14:25  neo23

	* debian/changelog: applied patch from Arien Malec to fix build of
	Debian packages
